# raf-coffee-backend

./: .gitignore  DEPLOY_TIMEWEB.md  README.md  docker-compose.port80.yaml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
backend/: .dockerignore  .env.example  Dockerfile  README.md  main.py  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: admin.py  interior.py  menu.py  vacancies.py
backend/app/core/: auth.py  config.py  database.py  redis_client.py
backend/app/models/: dish.py  interior.py  vacancy.py
backend/app/repositories/: dish_repository.py  interior_repository.py  vacancy_repository.py
backend/app/services/: menu_service.py  vacancy_service.py
backend/sql/: delete_category_bar.sql  fix_names_when_stored_as_question_marks.sql  init.sql  migrate_add_interior_galleries.sql  migrate_add_is_base_menu.sql  migrate_add_seasons.sql  migrate_add_sort_order.sql  migrate_add_subcategory_id.sql  migrate_add_vacancies.sql  migrate_add_volume_ml.sql  migrate_add_weight_grams.sql  migrate_dish_image_urls.sql  migrate_dish_volume_options.sql  migrate_subcategory_fk_set_null.sql  migrate_volume_option_nutrition.sql  purge_bar_and_pivo.sql  purge_drugie_category.sql  reseed_menu_categories.sql  reset_all_data_kitchen_drink.sql  seed_test_menu.sql
backend/static/: Меню (XLSX) (2).xlsx
backend/tests/: conftest.py  test_admin_api.py  test_admin_slugs.py
frontend/: admin.html  index.html  menu.html  nginx.conf  package-lock.json  package.json  privacy.html  tailwind.config.js  terms.html
scripts/: verify-stack.ps1
(+3 files in other folders)
